--- a/main.html
+++ b/main.html
@@ -3,17 +3,17 @@
 <html>
 
 <head>
-	<h1>""Why I want to become a developer?"</h1>
+	<h1>" Why I want to become a developer? "</h1>
 </head>
 
 <body>
 	<p>
 		"I want to be developer because to make my family proud.
-		I hava keen interst at computer technology and every iam enjoying the processing of 
-		understanding.
-		I want to do something in developing technology and give the best of mine
-		I want be first graduate in my family and no one study in my family . So i want 
-		be in positon in software field with highly knowledgeble person "
+		 I hava keen interst at computer technology and every iam enjoying the processing of 
+		 understanding.
+		 I want to do something in developing technology and give the best of mine.
+		 I want be first graduate in my family and no one study in my family . So i want 
+		 be in positon in software field with highly knowledgeble person."
 	</p>  
 		
 	
